--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,28 +10,32 @@ source:
   sha256: bd4f6d23de2f9501bedb8a32437b1a87d8d9be9cb6a3b8a676e33aa9d2d439a7
 
 build:
-  noarch: python
   entry_points:
-    - tests = "test_utils.load_tests:launch"
-  script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+    - tests = test_utils.load_tests:launch
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  number: 1
 
 requirements:
   host:
-    - python >=3.8
+    - python >=3.8,<4.0
     - poetry-core >=1.0.0
     - pip
   run:
-    - python >=3.8
+    - python >=3.8,<4.0
     - django >=4.2
     - djangorestframework >=3.14.0
-    - grpcio >=1.50.0,<2.0.0
     - grpcio-tools >=1.50.0,<2.0.0
-    - proto-parser >=1.6.3,<2.0.0
+    - lark-parser >=0.12.0,<0.13.0
 
 test:
   imports:
     - django_socio_grpc
+  commands:
+    - pip check
+    - tests --help
+  requires:
+    - pip
 
 about:
   summary: Fork of django-grpc-framework with more feature maintained by the socio team. Make GRPC with django easy.
