--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - djangorestframework >=3.14.0
     - grpcio-tools >=1.50.0,<2.0.0
     - lark-parser >=0.12.0,<0.13.0
+    - grpcio-health-checking
 
 test:
   imports:
