--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
 requirements:
   host:
     - python {{ python_min }}
-    - poetry-core >=1.0.0
+    - poetry-core >=1.0.0,<2.0.0
     - pip
   run:
     - lark >=1.0.0,<2.0.0
